# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pyci.yml
gendiff/: dicts_diff.py  diff_with_formatter.py  engine.py  formatter.py  gendiff.py  generate_diff.py  make_tree.py  parse.py  parser.py  tree.py
gendiff/formaters/: stylish.py
gendiff/formatters/: __init__.py  constants.py  json.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
